@@ -48,25 +48,25 @@ TAO_AMH_Response_Handler::~TAO_AMH_Response_Handler (void)
       {
         return;
       }
-
-    // If sending the exception to the client fails, then we just give
-    // up, release the transport and return.
-    ACE_DECLARE_NEW_CORBA_ENV;
-    ACE_TRY
-      {
-        CORBA::NO_RESPONSE ex (CORBA::SystemException::_tao_minor_code
-                               (TAO_AMH_REPLY_LOCATION_CODE,
-                                EFAULT),
-                               CORBA::COMPLETED_NO);
-        this->_tao_rh_send_exception (ex ACE_ENV_ARG_PARAMETER);
-        ACE_TRY_CHECK;
-      }
-    ACE_CATCHALL
-      {
-      }
-    ACE_ENDTRY;
-    ACE_CHECK;
   }
+
+  // If sending the exception to the client fails, then we just give
+  // up, release the transport and return.
+  ACE_DECLARE_NEW_CORBA_ENV;
+  ACE_TRY
+    {
+      CORBA::NO_RESPONSE ex (CORBA::SystemException::_tao_minor_code
+                             (TAO_AMH_REPLY_LOCATION_CODE,
+                              EFAULT),
+                             CORBA::COMPLETED_NO);
+      this->_tao_rh_send_exception (ex ACE_ENV_ARG_PARAMETER);
+      ACE_TRY_CHECK;
+    }
+  ACE_CATCHALL
+    {
+    }
+  ACE_ENDTRY;
+  ACE_CHECK;
 }
 
 void
@@ -186,10 +186,10 @@ TAO_AMH_Response_Handler::_tao_rh_send_exception (CORBA::Exception &ex
     if (this->reply_status_ != TAO_RS_UNINITIALIZED)
       {
         ACE_THROW (CORBA::BAD_INV_ORDER (
-                                         CORBA::SystemException::_tao_minor_code (
-                                                                                  TAO_AMH_REPLY_LOCATION_CODE,
-                                                                                  ENOTSUP),
-                                         CORBA::COMPLETED_YES));
+          CORBA::SystemException::_tao_minor_code (
+            TAO_AMH_REPLY_LOCATION_CODE,
+            ENOTSUP),
+          CORBA::COMPLETED_YES));
       }
     this->reply_status_ = TAO_RS_SENDING;
   }
@@ -259,4 +259,3 @@ namespace TAO
     (void) arh->_remove_ref ();
   }
 }
-
